--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif32
 board = seeed_xiao_esp32c3
 framework = arduino
+board_build.filesystem = littlefs
 monitor_speed = 115200
 monitor_dtr = 0
 monitor_rts = 0
@@ -21,3 +22,4 @@ lib_deps =
     https://github.com/Seeed-Projects/SeeedStudio_lvgl
     https://github.com/Seeed-Projects/SeeedStudio_TFT_eSPI
     ArduinoJson
+    SPIFFS
