--- a/platformio.ini
+++ b/platformio.ini
@@ -17,6 +17,7 @@ monitor_speed = 115200
 monitor_dtr = 0
 monitor_rts = 0
 upload_flags = --no-stub
+build_flags = -DCORE_DEBUG_LEVEL=3
 lib_deps =
     https://github.com/Seeed-Studio/Seeed_Arduino_RoundDisplay
     https://github.com/Seeed-Projects/SeeedStudio_lvgl
