--- a/.gitattributes
+++ b/.gitattributes
@@ -4,4 +4,6 @@ model/*.STEP filter=lfs diff=lfs merge=lfs -text
 model/*.STP filter=lfs diff=lfs merge=lfs -text
 model/*.step filter=lfs diff=lfs merge=lfs -text
 model/*.stp filter=lfs diff=lfs merge=lfs -text
+stl/*.STL filter=lfs diff=lfs merge=lfs -text
+stl/*.stl filter=lfs diff=lfs merge=lfs -text
 render/*.png filter=lfs diff=lfs merge=lfs -text
