--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -8,6 +8,9 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+extra_configs = upload_params.ini
+
 [env:seeed_xiao_esp32c3]
 platform = espressif32
 board = seeed_xiao_esp32c3
@@ -22,6 +25,11 @@ lib_deps =
     https://github.com/Seeed-Studio/Seeed_Arduino_RoundDisplay
     https://github.com/Seeed-Projects/SeeedStudio_lvgl
     https://github.com/Seeed-Projects/SeeedStudio_TFT_eSPI
-    ArduinoJson
+    bblanchon/ArduinoJson@^7.3.1
     SPIFFS
     PNGdec
+
+[env:seeed_xiao_esp32c3_ota]
+extends = env:seeed_xiao_esp32c3, upload_params
+upload_protocol = espota
+upload_port = xiao-screen.local
