--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -17,17 +17,13 @@ board = seeed_xiao_esp32c3
 framework = arduino
 board_build.filesystem = littlefs
 monitor_speed = 115200
-monitor_dtr = 0
-monitor_rts = 0
 upload_flags = --no-stub
 build_flags = -DCORE_DEBUG_LEVEL=3
 lib_deps =
-    https://github.com/Seeed-Studio/Seeed_Arduino_RoundDisplay
-    https://github.com/Seeed-Projects/SeeedStudio_lvgl
+    ; https://github.com/Seeed-Studio/Seeed_Arduino_RoundDisplay
     https://github.com/Seeed-Projects/SeeedStudio_TFT_eSPI
     bblanchon/ArduinoJson@^7.3.1
-    SPIFFS
-    PNGdec
+    PNGdec@1.1.3
 
 [env:seeed_xiao_esp32c3_ota]
 extends = env:seeed_xiao_esp32c3, upload_params
