--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -18,7 +18,25 @@ framework = arduino
 board_build.filesystem = littlefs
 monitor_speed = 115200
 upload_flags = --no-stub
-build_flags = -DCORE_DEBUG_LEVEL=3
+build_flags =
+    -DCORE_DEBUG_LEVEL=3
+
+    ; TFT_eSPI config from Setup66_Seeed_XIAO_Round.h (without fonts)
+    -DUSER_SETUP_LOADED=1
+    -DGC9A01_DRIVER=1
+    -DTFT_RGB_ORDER=1
+    -DTFT_HEIGHT=240
+    -DTFT_SCLK=8
+    -DTFT_MISO=9
+    -DTFT_MOSI=10
+    -DTFT_CS=3
+    -DTFT_DC=5
+    -DTFT_BL=21
+    -DTFT_RST=-1
+    -DSMOOTH_FONT=1
+    -DSPI_FREQUENCY=40000000
+    -DSPI_READ_FREQUENCY=20000000
+
 lib_deps =
     ; https://github.com/Seeed-Studio/Seeed_Arduino_RoundDisplay
     https://github.com/Seeed-Projects/SeeedStudio_TFT_eSPI
